# AstroEngine

./: .dockerignore  .editorconfig  .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit.ci.yml  AGENTS.md  CHANGELOG.md  DEPLOYKEY_SMOKETEST.md  Dockerfile  MANIFEST.in  Makefile  NOTICE  README.md  REPO_TOPOLOGY.md  SPEC_COMPLETION_PLAN.md  alembic.ini  bandit.yaml  conftest.py  constraints.txt  coverage.xml  dev-requirements.txt  docker-compose.yml  env.txt  environment  environment.yml  mkdocs.yml  mypy.ini  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-optional.txt  requirements.in  requirements.txt  ruff.toml  sitecustomize.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  labels.yml  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/compat/: py311_sweep_report.md
.github/triage/: scan_repo.py  triage_report.md
.github/workflows/: ci-guards.yml  ci-matrix.yml  ci.yml  codex-auto-fix-on-failure.yml  codex-triage.yml  conda-ci.yml  conflict-guard.yml  docs.yml  issue-triage.yml  nightly-healthcheck.yml  nightly-smoke-bench.yml  (+10 more)
.streamlit/: config.toml
Version Consolidation/: Makefile  README_CONSOLIDATION.md  consolidate_rulesets.py
analysis/: health_report.md  proposed_tasks.md
app/: __init__.py  main.py  observability.py  telemetry.py  uvicorn_runner.py
apps/: relationship_lab.py  streamlit_transit_scanner.py
astroengine/: __init__.py  __main__.py  api.py  api_server.py  app_api.py  canonical.py  catalogs.py  charts.py  cli.py  cli_legacy.py  config.py  detectors.py  detectors_aspects.py  diagnostics.py  doctor_conda.py  domains.py  engine.py  events.py  exporters.py  exporters_batch.py  exporters_ics.py  maint.py  narrative.py  narrative_overlay.py  profiles.py  refine.py  rulesets.py  runtime_config.py  scoring.py  timeline.py  transits.py  valence.py
core/: __init__.py
data/: dignities_lilly.json
datasets/: star_names_iau.csv
docs/: ACCEPTANCE_TEST_MATRIX.md  ALGORITHMS.md  ARCHITECTURE_OVERVIEW.md  ASPECT_ENGINE.md  ASPECT_PATTERNS_SPEC.md  ASTROJSON_SPEC.md  ASTROLOGY_COVERAGE_INDEX.md  ASTRO_REFERENCE.md  ATLAS_TZ_SPEC.md  COMPATIBILITY_MATRIX.md  COMPATIBILITY_py311.md  CONDA_FORGE_PLAN.md  DATA_PROVENANCE_LICENSES.md  DETERMINISM_TEST_PLAN.md  DEV.md  DEVELOPMENT.md  DEV_ENV.md  DEV_SETUP.md  DIAGNOSTICS.md  DIGNITIES_SECT_SPEC.md  DOCKER_PLAN.md  DRACONIC_SPEC.md  EASTPOINT_POLARASC_SPEC.md  ECLIPSE_LOCALITY_SPEC.md  ENV_SETUP.md  ENV_VARS.md  EPHEMERIS_CACHE_SPEC.md  EXPORT_ICS_SPEC.md  EXPORT_SCHEMAS.md  EXTRAS.md  FIXED_STARS_DATA_SPEC.md  GALACTIC_POINTS_SPEC.md  HARMONICS_SPEC.md  HARMONIC_CHARTS_SPEC.md  HIGH_LAT_HOUSE_NUMERIC.md  HOUSES_FALLBACK_SPEC.md  HOUSE_RULERS_DIGNITY_TABLES.md  I18N_SPEC.md  ISSUE_INDEX.md  LILITH_PRIAPUS_SPEC.md  (+50 more)
docs-site/: mkdocs.yml  requirements.txt
infra/: helmfile.yaml
installer/: AstroEngine.iss  windows_portal_entry.py
interpret-packs/: README.md
migrations/: README  env.py  script.py.mako
openapi/: v1.0.json
ops/: cosign.pub  otel-collector-config.yaml  prometheus.yml
packaging/: astroengine_cli.spec  astroengine_gui.spec  astroengine_portal.spec
plugins/: aspects_lots_template.py
plugins/sample_plugin/: pyproject.toml
plugins/sample_plugin/src/astroengine_plugins/: __init__.py  vca.py
plugins/sample_provider/: pyproject.toml
plugins/sample_provider/src/astroengine_providers/: __init__.py  swisseph.py
profiles/: aspects_policy.json  base_profile.yaml  dashboard_layout.json  dashboard_panes.yaml  dignities.csv  domain_mapping.json  domain_tree.json  feature_flags.md  fixed_stars.csv  orb_policy.json  scoring_policy.json  tradition_scoring.json  user_overrides.yaml  valence_policy.json  vca_outline.json  visibility_policy.json
qa/: __init__.py
registry/: aspects.yaml  domains.yaml  orbs_policy.yaml  plugins.yaml
requirements/: base.in  base.txt  dev.in  dev.txt
requirements.lock/: py311-deps.txt  py311.txt
rulesets/: main.yaml  vca_astroengine_master.yaml
schemas/: contact_gate_schema_v2.json  export_manifest_v1.json  house_ingress_event_v1.json  interpret_rulepack.schema.json  natal_input_v1_ext.json  orbs_policy.json  result_schema_v1.json  result_schema_v1_with_domains.json  shadow_period_event_v1.json
scripts/: bootstrap.sh  build_windows.ps1  check_core_coverage.py  dependency_utils.py  dev_setup.ps1  dev_setup.sh  generate_requirements.py  generate_sample_pdf.py  install_optional_dependencies.py  install_test_dependencies.py  preflight.py  refactor_swe_imports.py  run_qa_matrix.sh  setup_git_hooks.sh  swe_smoketest.py  update_compat_matrix.py
sdks/python/: CHANGELOG.md  README.md  pyproject.toml
sdks/python/astro_sdk/: __init__.py  client.py  errors.py  pagination.py
sdks/python/scripts/: generate.py
sdks/python/tests/: test_client.py  test_generator.py
security/: csp-policies.md
src/: README.md
st_shim/: __init__.py  _runtime.py
streamlit/: __init__.py  _runtime.py
tests/: __init__.py  conftest.py  fixtures_ephemeris.py  test_acceptance_public_api.py  test_acceptance_synthetic_contacts.py  test_acceptance_transit_window.py  test_accuracy_budget.py  test_agents_sdk.py  test_analysis_midpoints.py  test_angles.py  test_angles_utils.py  test_antiscia_analysis.py  test_api_aspects_search.py  test_api_charts.py  test_api_electional.py  test_api_electional_v1.py  test_api_events.py  test_api_import_export.py  test_api_interpret.py  test_api_lots.py  test_api_notes.py  test_api_policies.py  test_api_relationship.py  test_api_score_series.py  test_api_synastry_composites.py  test_api_time_validation.py  test_aspect_search.py  test_aspects_and_domains.py  test_aspects_events.py  test_atlas_geocoder.py  test_atlas_tz.py  test_body_gating.py  test_cache_ttl.py  test_cached_provider.py  test_canonical_body_position.py  test_canonical_event_adapter.py  test_chart_golden.py  test_chart_pdf_report.py  test_chart_wheel_svg.py  test_cli.py  (+154 more)
ui_streamlit/: altaz_app.py  horary_app.py  vedic_app.py
(+1326 files in other folders)
