# >>> AUTO-GEN BEGIN: packaging-and-extras v1.0
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astroengine"
version = "0.1.0"
description = "AstroEngine — modular transit engine and astrology toolkit"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AstroEngine Maintainers" }]
license = { text = "Proprietary" }
keywords = ["astrology", "ephemeris", "transits", "astronomy"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: Other/Proprietary License",
]

# Core runtime deps kept lean. Everything else under extras.
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "python-dateutil>=2.8",
  "pydantic>=2.11",
  "jsonschema>=4.20",
  "PyYAML>=6.0",
  "jsonschema>=4.21",
  "requests>=2.31",
  "python-multipart>=0.0.9",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "ics>=0.7",

  "timezonefinder>=6.2",

  "tzdata>=2023.3",
  "pluggy>=1.5",
  "fastapi>=0.117,<0.118",
  "pydantic>=2.9,<3",
  "httpx>=0.28,<0.29",
]

[project.optional-dependencies]
# Core astroengine stacks
ephem = [
  "pyswisseph>=2.10",
  "pymeeus>=0.5.12",
]
skyfield = [
  "skyfield>=1.48",
  "jplephem>=2.21",
]
catalogs = [
  "astroquery>=0.4",
]
exporters = [
  "pyarrow>=15",
  "ics>=0.7",
]
narrative = [
  "jinja2>=3.1",
]
perf = [
  "numba>=0.58",
]
cli = [
  "click>=8.1",
  "rich>=13.7",
  "pluggy>=1.5",
]

streamlit = [
  "streamlit>=1.35",

  "plotly>=5.20",

]

# Release bundles
api = [
  "fastapi>=0.117,<0.118",
  "uvicorn>=0.37,<0.38",
  "pydantic>=2.9,<3",
  "icalendar>=6",
  "httpx>=0.27",
]
providers = [
  "pyswisseph>=2.10",
  "timezonefinder>=6",
  "tzdata",
]
dev = [
  "pytest",
  "hypothesis",
  "ruff",
  "mypy",
]

all = [

  "astroengine[ephem,skyfield,catalogs,exporters,api,narrative,perf,cli,ui,providers]",

]

[project.urls]
Homepage = "https://github.com/rinward23/AstroEngine"

[project.scripts]
astroengine = "astroengine.cli:main"
astroengine-api = "astroengine.api_server:run"  # guarded import; only works with [api]
astroengine-streamlit = "astroengine.ux.streamlit.cli:main"

[tool.setuptools.package-data]
astroengine = ["py.typed"]

[project.entry-points."astroengine.plugins"]
# name = "module:function"
fixed_star_hits = "astroengine.plugins.examples.fixed_star_hits"
example = "astroengine.ux.plugins.example:ExamplePlugin"

[project.entry-points."astroengine.providers"]
# name = "module:function"


[tool.setuptools]
# Install the real package directory (not the generated skeleton only)
packages = { find = { where = ["."], include = ["astroengine*"] } }
include-package-data = true
# >>> AUTO-GEN END: packaging-and-extras v1.0

# >>> AUTO-GEN BEGIN: ruff target py311 v1.1
[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B"]
target-version = "py311"
extend-exclude = [
    "apps",
    "generated",
    "scripts",
    ".github",
    "astroengine/modules",
    "astroengine/mundane",
    "astroengine/narrative",
]
# >>> AUTO-GEN END: ruff target py311 v1.1

[tool.isort]
profile = "black"
line_length = 88
skip_glob = [
    "apps/*",
    "generated/*",
    "scripts/*",
    ".github/*",
    "astroengine/modules/*",
    "astroengine/mundane/*",
    "astroengine/narrative/*",
]

[tool.black]
line-length = 88
target-version = ["py311"]
