[project]
name = "astroengine-sample-plugin"
version = "0.1.0"
requires-python = ">=3.11"

[project.entry-points."astroengine.plugins"]
example_vca = "astroengine_plugins.vca:register"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
