[project]
name = "astroengine-sample-provider"
version = "0.1.0"
requires-python = ">=3.11"

[project.entry-points."astroengine.providers"]
swiss_ephemeris = "astroengine_providers.swisseph:provider"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
